Overflow issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
+html {
+  overflow-x: hidden;
+}
+
 body {
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
   margin: 0;
   font-family: 'Roboto', sans-serif !important;
